<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KPC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">SIGN UP</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="submit">SUBMIT</string>
    <string name="pictures">PICTURES</string>
    <string name="videos_btn">VIDEOS</string>
    <string name="done">DONE</string>
    <string name="name">Name:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="constituency">Constituency:</string>
    <string name="designation">Designation:</string>
    <string name="Email_Id">Email Id:</string>

    <string name="messages">Messages</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="poll">POLL</string>
    <string name="subject">Subject</string>
    <string name="type_feedback">Type your feedback here</string>
    <string name="news_feed">NEWS FEED</string>
    <string name="venue">Venue :</string>
    <string name="vote">VOTE</string>
    <string name="feeds">FEEDS</string>
    <string name="our_leader">OUR LEADERS</string>
    <string name="our_event">EVENTS</string>
    <string name="home">Home</string>
    <string name="leaders">Leaders</string>
    <string name="events">Events</string>
    <string name="refer">Refer</string>
    <string name="search">Search</string>
    <string name="event_details">Event Details</string>
    <string name="constituency_text">Constituency</string>
    <string name="feedback">FEEDBACK</string>
    <string name="gcm_server_id">290482400189</string>


</resources>
